fix: fix align

--- a/packages/vkui/src/components/Select/Select.module.css
+++ b/packages/vkui/src/components/Select/Select.module.css
@@ -21,8 +21,7 @@
 }
 
 .Select__container {
-  display: flex;
-  align-items: center;
+  align-self: center;
   flex-grow: 1;
   flex-shrink: 1;
   padding-inline: 12px 0;
